# inference-engine-rust

./: Cargo.toml  README.md
examples/: classification_sample.rs
src/: core.rs  executable_network.rs  infer_request.rs  lib.rs  network_reader.rs  utils.rs
src/executable_network/: infer_request.rs
test_data/: .gitattributes
tests/: core.rs  integration_tests.rs
