[package]
name = "inference-engine-rust"
version = "0.1.0"
authors = ["ArtemSkrebkov <skrebkov.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inference-engine-sys-rust = {version = "0.1.0", path = "../inference-engine-sys-rust/"}
libc = "0.2.69"
ndarray = "0.13.1"
ndarray-image = "0.2.1"
rulinalg = "0.4.2"

